feat: 파일 중복 문제 번호로 해결, 인코딩 해결